Fix to prevent line break inside tag

--- a/themes/nica/assets/style/pages/_portfolio.scss
+++ b/themes/nica/assets/style/pages/_portfolio.scss
@@ -117,6 +117,7 @@ main.term.tags {
       left: .2rem;
       position: relative;
       font-weight: normal;
+      white-space: nowrap;
     }
   }
 }
